--- a/client/partials/icons.html
+++ b/client/partials/icons.html
@@ -332,6 +332,18 @@
 				    </g>
 				</g>
 			</symbol>
+
+			<!-- time stamp icon -->
+			<symbol id="icn_timeStamp" viewBox="0 0 100 100">
+			    <!-- Generator: Sketch 3.8.3 (29802) - http://www.bohemiancoding.com/sketch -->
+			    <title>Time marker icon</title>
+			    <defs></defs>
+			    <g id="Symbols" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+			        <g id="timestamp" fill="currentColor">
+			            <path d="M54,42.0678866 C69.0833235,43.0952824 81,55.6559968 81,71 C81,87.0162577 68.0162577,100 52,100 C35.9837423,100 23,87.0162577 23,71 C23,55.6559968 34.9166765,43.0952824 50,42.0678866 L50,0 L54,0 L54,42.0678866 Z" id="Combined-Shape"></path>
+			        </g>
+			    </g>
+			</symbol>
 		</svg>
 	</div>
 </template>
