--- a/client/partials/menu.html
+++ b/client/partials/menu.html
@@ -1,7 +1,7 @@
 <template name="navMenu">
 	<!-- make animated class -->
 	<div class="mini-nav">
-		<a type="button" href="#" title="email me" class="mini-nav-btn js_email_me dynamic_color" data-color="{{globalPallet.cta}}">
+		<a type="button" href="#" title="email me" class="mini-nav-btn js_email_me cta-color">
 			{{>SVGicon name="email"}}
 		</a>
 		<a type="button" href="#" class="mini-nav-btn js_toggle_menu dynamic_color" data-color="{{color}}" title="Menu">
@@ -45,20 +45,20 @@
 </template>
 
 <template name="topLevelMenu">
-	<nav class="top-level-navigation dynamic_color" data-color={{color}}>
+	<nav class="top-level-navigation utility-background dynamic_color" data-color={{color}}>
 		<ul class="item-list">
 			<li class="item {{#if isCurrentPage 'home'}} active {{/if}}">
-				<a class="js_main_nav_link" href="/" title="Home">
+				<a class="js_main_nav_link menu-item-link" href="/" title="Home">
 					<h5>{{> SVGicon name="home"}}&nbsp;<span class="tab-name">Home</span></h5>
 				</a>
 			</li>
 			<li class="item {{#if isCurrentPage 'portfolio'}} active {{/if}}">
-				<a class="js_main_nav_link" href="/portfolio" title="Portfolio">
+				<a class="js_main_nav_link menu-item-link" href="/portfolio" title="Portfolio">
 					<h5>{{> SVGicon name="portfolio"}}&nbsp;<span class="tab-name">Portfolio</span></h5>
 				</a>
 			</li>
 			<li class="item">
-				<a class="js_email_me" href="?email=true" title="email me">
+				<a class="js_email_me menu-item-link" href="?email=true" title="email me">
 					<h5>{{>SVGicon name="email"}}&nbsp;<span class="tab-name">Contact me</span></h5>
 
 				</a>
