--- a/client/styles/_colors.scss
+++ b/client/styles/_colors.scss
@@ -1,6 +1,14 @@
 $black-copy:#333333;
 
-$utility: #677CF7;
+$utility: #9067f7;
+
+$cta-background: #67a8f7;
+$cta: #f7ad68;
+
+$white: #f7f7f7;
+
+$red: #f7688c;
+
 
 
 //////////////////////////////////////////////////
@@ -21,7 +29,7 @@ $gray-dark:$black-copy;   // #333
 // $brand-info:            #5bc0de;
 // $brand-warning:         #f0ad4e;
 // $brand-danger:          #d9534f;
-$body-bg:               #fff;
+$body-bg:               $white;
 // $text-color:            $gray-dark;
 // $link-color:            $brand-primary;
 // $link-hover-color:      darken($link-color, 15%);
@@ -31,25 +39,25 @@ $body-bg:               #fff;
 // $table-bg-active:               $table-bg-hover;
 // $table-border-color:            #ddd;
 // $btn-default-color:              #333;
-// $btn-default-bg:                 #fff;
+// $btn-default-bg:                 $white;
 // $btn-default-border:             #ccc;
-// $btn-primary-color:              #fff;
+// $btn-primary-color:              $white;
 // $btn-primary-bg:                 $brand-primary;
 // $btn-primary-border:             darken($btn-primary-bg, 5%);
-// $btn-success-color:              #fff;
+// $btn-success-color:              $white;
 // $btn-success-bg:                 $brand-success;
 // $btn-success-border:             darken($btn-success-bg, 5%);
-// $btn-info-color:                 #fff;
+// $btn-info-color:                 $white;
 // $btn-info-bg:                    $brand-info;
 // $btn-info-border:                darken($btn-info-bg, 5%);
-// $btn-warning-color:              #fff;
+// $btn-warning-color:              $white;
 // $btn-warning-bg:                 $brand-warning;
 // $btn-warning-border:             darken($btn-warning-bg, 5%);
-// $btn-danger-color:               #fff;
+// $btn-danger-color:               $white;
 // $btn-danger-bg:                  $brand-danger;
 // $btn-danger-border:              darken($btn-danger-bg, 5%);
 // $btn-link-disabled-color:        $gray-light;
-// $input-bg:                       #fff;
+// $input-bg:                       $white;
 // $input-bg-disabled:              $gray-lighter;
 // $input-color:                    $gray;
 // $input-border:                   #ccc;
@@ -59,7 +67,7 @@ $body-bg:               #fff;
 // $legend-border-color:            #e5e5e5;
 // $input-group-addon-bg:           $gray-lighter;
 // $input-group-addon-border-color: $input-border;
-// $dropdown-bg:                    #fff;
+// $dropdown-bg:                    $white;
 // $dropdown-border:                rgba(0,0,0,.15);
 // $dropdown-fallback-border:       #ccc;
 // $dropdown-divider-bg:            #e5e5e5;
@@ -91,17 +99,17 @@ $body-bg:               #fff;
 // $navbar-inverse-bg:                         #222;
 // $navbar-inverse-border:                     darken($navbar-inverse-bg, 10%);
 // $navbar-inverse-link-color:                 lighten($gray-light, 15%);
-// $navbar-inverse-link-hover-color:           #fff;
+// $navbar-inverse-link-hover-color:           $white;
 // $navbar-inverse-link-hover-bg:              transparent;
 // $navbar-inverse-link-active-color:          $navbar-inverse-link-hover-color;
 // $navbar-inverse-link-active-bg:             darken($navbar-inverse-bg, 10%);
 // $navbar-inverse-link-disabled-color:        #444;
 // $navbar-inverse-link-disabled-bg:           transparent;
 // $navbar-inverse-brand-color:                $navbar-inverse-link-color;
-// $navbar-inverse-brand-hover-color:          #fff;
+// $navbar-inverse-brand-hover-color:          $white;
 // $navbar-inverse-brand-hover-bg:             transparent;
 // $navbar-inverse-toggle-hover-bg:            #333;
-// $navbar-inverse-toggle-icon-bar-bg:         #fff;
+// $navbar-inverse-toggle-icon-bar-bg:         $white;
 // $navbar-inverse-toggle-border-color:        #333;
 // $nav-link-hover-bg:                         $gray-lighter;
 // $nav-disabled-link-hover-color:             $gray-light;
@@ -115,16 +123,16 @@ $body-bg:               #fff;
 // $nav-pills-active-link-hover-bg:            $component-active-bg;
 // $nav-pills-active-link-hover-color:         $component-active-color;
 // $pagination-color:                     $link-color;
-// $pagination-bg:                        #fff;
+// $pagination-bg:                        $white;
 // $pagination-border:                    #ddd;
 // $pagination-hover-color:               $link-hover-color;
 // $pagination-hover-bg:                  $gray-lighter;
 // $pagination-hover-border:              #ddd;
-// $pagination-active-color:              #fff;
+// $pagination-active-color:              $white;
 // $pagination-active-bg:                 $brand-primary;
 // $pagination-active-border:             $brand-primary;
 // $pagination-disabled-color:            $gray-light;
-// $pagination-disabled-bg:               #fff;
+// $pagination-disabled-bg:               $white;
 // $pagination-disabled-border:           #ddd;
 // $pager-bg:                             $pagination-bg;
 // $pager-border:                         $pagination-border;
@@ -147,10 +155,10 @@ $body-bg:               #fff;
 // $state-danger-text:              #a94442;
 // $state-danger-bg:                #f2dede;
 // $state-danger-border:            darken(adjust-hue($state-danger-bg, -10), 5%);
-// $tooltip-color:               #fff;
+// $tooltip-color:               $white;
 // $tooltip-bg:                  #000;
 // $tooltip-arrow-color:         $tooltip-bg;
-// $popover-bg:                          #fff;
+// $popover-bg:                          $white;
 // $popover-border-color:                rgba(0,0,0,.2);
 // $popover-fallback-border-color:       #ccc;
 // $popover-title-bg:                    darken($popover-bg, 3%);
@@ -163,9 +171,9 @@ $body-bg:               #fff;
 // $label-info-bg:               $brand-info;
 // $label-warning-bg:            $brand-warning;
 // $label-danger-bg:             $brand-danger;
-// $label-color:                 #fff;
-// $label-link-hover-color:      #fff;
-// $modal-content-bg:                             #fff;
+// $label-color:                 $white;
+// $label-link-hover-color:      $white;
+// $modal-content-bg:                             $white;
 // $modal-content-border-color:                   rgba(0,0,0,.2);
 // $modal-content-fallback-border-color:          #999;
 // $modal-backdrop-bg:           #000;
@@ -185,13 +193,13 @@ $body-bg:               #fff;
 // $alert-danger-text:           $state-danger-text;
 // $alert-danger-border:         $state-danger-border;
 // $progress-bg:                 #f5f5f5;
-// $progress-bar-color:          #fff;
+// $progress-bar-color:          $white;
 // $progress-bar-bg:             $brand-primary;
 // $progress-bar-success-bg:     $brand-success;
 // $progress-bar-warning-bg:     $brand-warning;
 // $progress-bar-danger-bg:      $brand-danger;
 // $progress-bar-info-bg:        $brand-info;
-// $list-group-bg:                 #fff;
+// $list-group-bg:                 $white;
 // $list-group-border:             #ddd;
 // $list-group-hover-bg:           #f5f5f5;
 // $list-group-active-color:       $component-active-color;
@@ -204,13 +212,13 @@ $body-bg:               #fff;
 // $list-group-link-color:         #555;
 // $list-group-link-hover-color:   $list-group-link-color;
 // $list-group-link-heading-color: #333;
-// $panel-bg:                    #fff;
+// $panel-bg:                    $white;
 // $panel-inner-border:          #ddd;
 // $panel-footer-bg:             #f5f5f5;
 // $panel-default-text:          $gray-dark;
 // $panel-default-border:        #ddd;
 // $panel-default-heading-bg:    #f5f5f5;
-// $panel-primary-text:          #fff;
+// $panel-primary-text:          $white;
 // $panel-primary-border:        $brand-primary;
 // $panel-primary-heading-bg:    $brand-primary;
 // $panel-success-text:          $state-success-text;
@@ -230,22 +238,22 @@ $body-bg:               #fff;
 // $thumbnail-caption-color:     $text-color;
 // $well-bg:                     #f5f5f5;
 // $well-border:                 darken($well-bg, 7%);
-// $badge-color:                 #fff;
-// $badge-link-hover-color:      #fff;
+// $badge-color:                 $white;
+// $badge-link-hover-color:      $white;
 // $badge-bg:                    $gray-light;
 // $badge-active-color:          $link-color;
-// $badge-active-bg:             #fff;
+// $badge-active-bg:             $white;
 // $breadcrumb-bg:                 #f5f5f5;
 // $breadcrumb-color:              #ccc;
 // $breadcrumb-active-color:       $gray-light;
-// $carousel-control-color:                      #fff;
-// $carousel-indicator-active-bg:                #fff;
-// $carousel-indicator-border-color:             #fff;
-// $carousel-caption-color:                      #fff;
+// $carousel-control-color:                      $white;
+// $carousel-indicator-active-bg:                $white;
+// $carousel-indicator-border-color:             $white;
+// $carousel-caption-color:                      $white;
 // $close-color:                 #000;
 // $code-color:                  #c7254e;
 // $code-bg:                     #f9f2f4;
-// $kbd-color:                   #fff;
+// $kbd-color:                   $white;
 // $kbd-bg:                      #333;
 // $pre-bg:                      #f5f5f5;
 // $pre-color:                   $gray-dark;
