--- a/client/styles/_email.scss
+++ b/client/styles/_email.scss
@@ -6,8 +6,9 @@
 	left:0;
 	background-color: rgba($black-copy, .75);
 	z-index: 10;
-	min-width: 100vw;
 	width: auto;
+	min-width: 100vw;
+	min-height: 100%;
 }
 
 
