--- a/client/styles/_error.scss
+++ b/client/styles/_error.scss
@@ -65,7 +65,7 @@
 
 		#goHome{
 
-			background-color: white;
+			background-color: $white;
 			border-radius: 100%;
 			z-index: 10;
 			transition-property: transform;
@@ -74,7 +74,7 @@
 
 			&::after,&::before{
 
-				background-color: white;
+				background-color: $white;
 				position: absolute;
 				width: 100%;
 				height: 100%;
