--- a/client/styles/_landing.scss
+++ b/client/styles/_landing.scss
@@ -2,38 +2,73 @@
 .landing-page{
 
 	@extend .fg-col-xs;
-	.top-level-navigation{
+	justify-content:space-between;
 	
+	.top-level-navigation{
+		flex-grow:0;
+		flex-shrink:0;
 	}
 
 	.slide{
 
-		@extend .fg-row;
+		@extend .fg-col-xs;
 		flex-grow:1;
-		flex-basis:50%;
+		align-items: center;
+		justify-content: center;
+		@media screen and (max-width: $fg-sm - 1) {
+			flex-basis: 100%;
+		}
+		@media screen and (min-width: $fg-sm) {
+			flex-wrap: wrap;
+		}
+		// overflow: hidden;
 
 		.svg-graphics, .slide-text{
 
 			@extend .fg-col-xs-12;
 			@extend .fg-col-sm-6;
-			justify-content: center;
+
+		}
+
+		.svg-graphics{
+
+			@media screen and (max-width: $fg-sm - 1) {
+				max-height: 60%;
+				max-height: calc(70vh - #{$space*10});
+			}
+			@media screen and (min-width: $fg-sm) {
+				max-height: 90%;
+				max-height: calc(100vh - #{$space*10});
+			}
 
 		}
 
 		.slide-text{
 
 			@extend .fg-col-xs;
-			justify-content: center;
+			flex-grow:0;
+
+		}
+
+		.slide-btn{
+
+			@extend .fg-col-xs-12;
+			align-self:stretch;
+			text-align: center;
+
 
 		}
 
 		&.wide-image{
-
-			@extend .fg-col-xs;
+			flex-wrap: wrap;
 			
 			.svg-graphics, .slide-text{
 				
-				@extend .fg-col-sm-12;
+				@extend .fg-col-xs-12;
+				flex-basis: 50%;
+				flex-grow:0;
+				max-height: 40%;
+				max-height: calc(40vh - 10rem);
 
 			}
 
@@ -41,11 +76,21 @@
 
 				align-items: baseline;
 				flex-direction:row;
+				flex-wrap: wrap;
 
 				>*{
+
 					@extend .fg-col-xs-12;
 					@extend .fg-col-sm-6;
+
 				}
+
+			}
+
+			.slide-btn{
+
+				@extend .fg-col-sm-6;
+
 
 			}
 		}
@@ -60,6 +105,48 @@
 
 			.svg-graphics{
 
+				order:3;
+
+			}
+
+			.slide-btn{
+
+				order:2;
+
+			}
+
+			@media screen and (max-width: $fg-sm - 1), screen and (orientation: portrait) {
+				.svg-graphics{
+
+					order:2;
+
+				}
+
+				.slide-btn{
+
+					order:3;
+
+				}
+			}
+
+		}
+
+		&.single-image{
+
+			@media screen and (max-width: $fg-sm -1) {
+				justify-content: flex-start;			
+			}
+
+			.svg-graphics{
+
+				order:1;
+				max-height: 80%;
+				max-height: calc(90vh - #{$space*10});
+
+			}
+
+			.slide-btn{
+
 				order:2;
 
 			}
@@ -67,6 +154,10 @@
 		}
 	}
 	.slide-pagination{
+
+		@extend .fg-col-sm-12;
+		flex-shrink:0;
+		// align-self:flex-end;
 
 		.pgn-list{
 
@@ -80,7 +171,10 @@
 
 				min-width: 2.25em;
 				@media screen and (min-width: $fg-sm) {
-					margin-left: 1em;
+					margin-left: $space;
+				}
+				&::after{
+					display: none;
 				}
 
 			}
@@ -91,11 +185,20 @@
 // font- and sizing
 .landing-page {
 
+	.top-level-navigation{
+		@media screen and (max-width: $fg-sm - 1) {
+			font-size: 80%;
+		}
+	}
+
 	.slide {
 
+		font-size: 200%;
+		@media screen and (max-width: $fg-sm - 1) {
+			font-size: 120%;
+		}
+
 		.slide-text {
-			
-			font-size: 200%;
 
 			h3 {
 			
@@ -103,6 +206,13 @@
 				font-weight: bold;
 
 			}
+
+		}
+
+		.slide-link-btn{
+
+			font-weight: bold;
+
 		}
 	}
 }
@@ -112,14 +222,26 @@
 
 	.slide {
 
-		padding: $space;
+		@media screen and (min-width: $fg-sm) {
+			padding: $space;
+		}
 
 		.slide-text{
 
 			>*{
-				padding: $space;
+
+				@media screen and (min-width: $fg-sm) {
+					padding: $space;
+				}
+
 			}
 
+		}
+
+		.slide-btn{
+			// @media screen and (max-width: $fg-sm - 1) {
+				margin-top: $space;
+			// }
 		}
 
 	}
@@ -129,6 +251,13 @@
 .landing-page {
 
 	background-color: $body-bg;
+
+	.slide-link-btn{
+
+		background-color: $cta-background;
+		color: $cta;
+
+	}
 
 	.slide-pagination {
 
