--- a/client/styles/_email.scss
+++ b/client/styles/_email.scss
@@ -3,7 +3,7 @@
 	@extend .fg-row;
 	position: absolute;
 	top:0;
-	left:0;
+	// left:0;
 	background-color: rgba($black-copy, .75);
 	z-index: 10;
 	width: auto;
