hint controller, navigation path controller

--- a/client/partials/consent.html
+++ b/client/partials/consent.html
@@ -17,7 +17,7 @@
 						</div>
 
 						<div class="statement">
-							{{>formField label_text="I agree to participate in this study" name="experiment" type="checkbox" isRequired="true"}}
+							{{>formField label_text="I agree to participate in this study" name="experiment" type="checkbox"  value=experimentValue}}
 						</div>
 					</div>
 					
@@ -29,7 +29,7 @@
 						</div>
 
 						<div class="statement">
-							{{>formField label_text="I consent to the use of cookies on this site" name="cookies" type="checkbox" value="true" isRequired="true"}}
+							{{>formField label_text="I consent to the use of cookies on this site" name="cookies" type="checkbox"  value=cookiesValue}}
 						</div>
 					</div>
 					
