--- a/client/partials/icons.html
+++ b/client/partials/icons.html
@@ -102,7 +102,8 @@
 
 			<!-- vertical swipe -->
 			<symbol id="icn_swipeVertical" viewBox="0 0 100 100">
-			    <g id="swipe_vertical_icn" stroke="none" stroke-width="1" fill="currentCollor" fill-rule="evenodd">
+				<desc>Swipe up or down</desc>
+			    <g id="swipe_vertical_icn" stroke="none" stroke-width="1" fill="currentColor" fill-rule="evenodd">
 			        <g id="palm-finger" transform="translate(23.000000, 16.000000)">
 			            <path d="M21,27.1174996 C23.5411314,26.3897518 26.22505,26 29,26 C45.0162577,26 58,38.9837423 58,55 C58,71.0162577 45.0162577,84 29,84 C12.9837423,84 0,71.0162577 0,55 C0,44.4736203 5.60835962,35.2571431 14,30.1756474 L14,34.9981691 C7.92776649,39.5592007 4,46.8209108 4,55 C4,68.8071187 15.1928813,80 29,80 C42.8071187,80 54,68.8071187 54,55 C54,41.1928813 42.8071187,30 29,30 C26.2021981,30 23.511739,30.4595891 21,31.3073899 L21,27.1174996 Z" id="Combined-Shape"></path>
 			            <rect id="Rectangle-13" x="21" y="7" width="4" height="43"></rect>
@@ -118,7 +119,6 @@
 			        </g>
 			    </g>
 			</symbol>
-
 
 			<!-- tap -->
 			<symbol id="icn_tap" viewBox="0 0 100 100">
@@ -141,6 +141,32 @@
 		                <rect id="Rectangle-17" x="38" y="0" width="4" height="12"></rect>
 		            </g>
 		        </g>
+			</symbol>
+
+			<!-- double tap -->
+			<symbol id="icn_doubleTap" viewBox="0 0 100 100">
+				<g id="double_tap_icn" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+				    <g id="double_tap_icn" fill="currentColor">
+				        <g id="palm-finger" transform="translate(23.000000, 16.000000)">
+				            <path d="M21,27.1174996 C23.5411314,26.3897518 26.22505,26 29,26 C45.0162577,26 58,38.9837423 58,55 C58,71.0162577 45.0162577,84 29,84 C12.9837423,84 0,71.0162577 0,55 C0,44.4736203 5.60835962,35.2571431 14,30.1756474 L14,34.9981691 C7.92776649,39.5592007 4,46.8209108 4,55 C4,68.8071187 15.1928813,80 29,80 C42.8071187,80 54,68.8071187 54,55 C54,41.1928813 42.8071187,30 29,30 C26.2021981,30 23.511739,30.4595891 21,31.3073899 L21,27.1174996 Z" id="Combined-Shape"></path>
+				            <rect id="Rectangle-13" x="21" y="7" width="4" height="43"></rect>
+				            <rect id="Rectangle-13-Copy" x="10" y="7" width="4" height="43"></rect>
+				            <rect id="Rectangle-13-Copy-2" x="32" y="28.5" width="4" height="21.5"></rect>
+				            <path d="M17.5,15 C21.6421356,15 25,11.6421356 25,7.5 C25,3.35786438 21.6421356,0 17.5,0 C13.3578644,0 10,3.35786438 10,7.5 C10,11.6421356 13.3578644,15 17.5,15 Z M17.5,11 C19.4329966,11 21,9.43299662 21,7.5 C21,5.56700338 19.4329966,4 17.5,4 C15.5670034,4 14,5.56700338 14,7.5 C14,9.43299662 15.5670034,11 17.5,11 Z" id="Combined-Shape"></path>
+				            <rect id="Rectangle-13-Copy-3" x="43" y="34" width="4" height="16"></rect>
+				        </g>
+				        <rect id="Rectangle-17" transform="translate(23.000000, 20.000000) rotate(-90.000000) translate(-23.000000, -20.000000) " x="21" y="17" width="4" height="6"></rect>
+				        <rect id="Rectangle-17-Copy-7" transform="translate(30.000000, 20.000000) rotate(-90.000000) translate(-30.000000, -20.000000) " x="28" y="18" width="4" height="4"></rect>
+				        <rect id="Rectangle-17-Copy" transform="translate(58.000000, 20.000000) rotate(-90.000000) translate(-58.000000, -20.000000) " x="56" y="17" width="4" height="6"></rect>
+				        <rect id="Rectangle-17-Copy-6" transform="translate(51.000000, 20.000000) rotate(-90.000000) translate(-51.000000, -20.000000) " x="49" y="18" width="4" height="4"></rect>
+				        <rect id="Rectangle-17-Copy" transform="translate(27.656854, 7.656854) rotate(-45.000000) translate(-27.656854, -7.656854) " x="25.6568542" y="4.65685425" width="4" height="6"></rect>
+				        <rect id="Rectangle-17-Copy-4" transform="translate(32.535534, 12.535534) rotate(-45.000000) translate(-32.535534, -12.535534) " x="30.5355339" y="10.5355339" width="4" height="4"></rect>
+				        <rect id="Rectangle-17-Copy-2" transform="translate(52.343146, 7.656854) rotate(-135.000000) translate(-52.343146, -7.656854) " x="50.3431458" y="4.65685425" width="4" height="6"></rect>
+				        <rect id="Rectangle-17-Copy-5" transform="translate(47.464466, 12.535534) rotate(-135.000000) translate(-47.464466, -12.535534) " x="45.4644661" y="10.5355339" width="4" height="4"></rect>
+				        <rect id="Rectangle-17" x="38" y="0" width="4" height="6"></rect>
+				        <rect id="Rectangle-17-Copy-3" x="38" y="8" width="4" height="4"></rect>
+				    </g>
+				</g>
 			</symbol>
 
 
