--- a/client/partials/page-overlay.html
+++ b/client/partials/page-overlay.html
@@ -1,5 +1,5 @@
 <template name="pageOverlay">
-	{{#momentum plugin='animate-css' sKlass='page-overlay' timeout=1000}}
+	{{#momentum plugin='fade' sKlass='page-overlay'}}
 		{{> Template.dynamic template=overlay}}
 	{{/momentum}}
 </template>
