--- a/client/partials/hints.html
+++ b/client/partials/hints.html
@@ -1,4 +1,5 @@
 <template name="hintOverlay">
+{{#with hint}}
 	<div class="hint-overlay">
 		<div class="wrap">
 			<div class="close-btn">
@@ -6,14 +7,15 @@
 					<h5>{{> SVGicon name="cross"}}</h5>
 				</a>
 			</div>
-			{{#with hint}}
+			
 			<div class="hint-icon">
-				{{> SVGicon name=icon}}
+				{{> SVGicon name=name}}
 			</div>
 			<div class="hint-text">
 				{{text}}
 			</div>
-			{{/with}}
+			
 		</div>
 	</div>
+{{/with}}
 </template>
