--- a/client/styles/_hints.scss
+++ b/client/styles/_hints.scss
@@ -10,6 +10,7 @@
 	width: auto;
 	width: 100vw;
 	height: 100%;
+	pointer-events:none;
 	
 
 	.wrap{
@@ -25,11 +26,15 @@
 	.close-btn{
 		align-self: flex-end;
 		margin: $space;
+		pointer-events:all;
 	}
 
 	.hint-icon{
 		@extend .fg-col-xs;
 		font-size: 600%;
+		@media screen and (max-width: $fg-md) {
+			font-size: 300%;
+		}
 		text-align: center;
 		flex-grow:1;
 		justify-content:flex-end;
@@ -38,9 +43,16 @@
 	.hint-text{
 		@extend .fg-col-xs;
 		font-size: 400%;
+		@media screen and (max-width: $fg-md) {
+			font-size: 200%;
+		}
 		text-align: center;
 		flex-grow:1;
 		justify-content:flex-start;
 		font-family: $headings-font-family;
+	}
+
+	a{
+		display: block;
 	}
 }
