bug fix, back cover

--- a/client/partials/consent.html
+++ b/client/partials/consent.html
@@ -25,7 +25,7 @@
 						<!-- cookies consent -->
 						{{>SVGicon name="cookie"}}
 						<div class="description">
-							<p>This site uses cookies to ensure best user experience. Cookies are also required if you choose to participate in study.</p>
+							<p>This site uses cookies to ensure best user experience. Cookies are required to keep your <strong>progress</strong> and experiment <strong>results</strong> available to you.</p>
 						</div>
 
 						<div class="statement">
