--- a/client/partials/hints.html
+++ b/client/partials/hints.html
@@ -3,7 +3,7 @@
 	<div class="hint-overlay">
 		<div class="wrap">
 			<div class="close-btn">
-				<a href="#" class="close-button js_close_hint" title="Clos">
+				<a href="#" class="close-button js_close_hint" title="Close">
 					<h5>{{> SVGicon name="cross"}}</h5>
 				</a>
 			</div>
