--- a/client/styles/_form.scss
+++ b/client/styles/_form.scss
@@ -30,55 +30,6 @@
 
 		}
 	}
-	.dialog-form{
-
-		form{
-			>div{
-
-				width: 100%;
-
-				label{
-
-					width: 100%;
-
-					.label-text{
-
-						width: 100%;
-
-					}
-					input, textarea{
-
-						width: 100%;
-
-					}
-
-					&.checkbox-input-group{
-						
-						@extend .fg-row;
-						align-items: center;
-						
-						.checkbox{
-
-							@extend .fg-col-xs-3;
-							@extend .fg-col-sm-2;
-							// @extend .fg-col-lg-1;
-							order:1;
-
-						}
-
-						.label-text{
-
-							@extend .fg-col-xs-9;
-							@extend .fg-col-sm-10;
-							// @extend .fg-col-lg-11;
-							order:2;
-							
-						}
-					}
-				}
-			}
-		}
-	}
 	.dialog-controls{
 
 		@extend .fg-row;
@@ -92,6 +43,93 @@
 		}
 	}
 }
+
+.dialog-form{
+
+	form{
+		>div{
+
+			width: 100%;
+
+			label{
+
+				width: 100%;
+
+				.label-text{
+
+					width: 100%;
+
+				}
+				input, textarea{
+
+					width: 100%;
+
+				}
+
+				&.inline-form{
+
+					.label-text{
+						// @extend .fg-col-xs-;
+					}
+					.inline-group{
+						@extend .fg-row;
+						flex-wrap:nowrap;
+						@media screen and (max-width: $fg-sm - 1) {
+							flex-direction: column;
+						}
+						a{
+							// flex-basis:10em;
+							// flex-grow:1;
+							// @extend .fg-row;
+							@extend .fg-col-xs-12;
+							@extend .fg-col-sm-3;
+							// @extend .fg-col-md-2;
+							flex-wrap:nowrap;
+							justify-content:center;
+							align-items:center;
+							
+							// height: 100%;
+							// padding: $space;
+						}
+						input, textarea{
+							@extend .fg-col-xs-12;
+							@extend .fg-col-sm-9;
+							// @extend .fg-col-md-10;
+							// flex-basis: 80%;
+							// flex-grow:1;
+						}
+					}
+				}
+
+				&.checkbox-input-group{
+					
+					@extend .fg-row;
+					align-items: center;
+					
+					.checkbox{
+
+						@extend .fg-col-xs-3;
+						@extend .fg-col-sm-2;
+						// @extend .fg-col-lg-1;
+						order:1;
+
+					}
+
+					.label-text{
+
+						@extend .fg-col-xs-9;
+						@extend .fg-col-sm-10;
+						// @extend .fg-col-lg-11;
+						order:2;
+						
+					}
+				}
+			}
+		}
+	}
+}
+
+// spacing
 
 .dialog-form{
 	
@@ -113,6 +151,35 @@
 			}
 
 		}
+
+
+		&.inline-form{
+
+			.label-text{
+				@media screen and (min-width: $fg-sm - 1) {
+					transform: translateY(2em);	
+				}
+			}
+			.inline-group{
+				border-color: $white;
+				a{
+					padding-bottom: $space/2;
+					padding-top: $space/2;
+					border: $space/2 solid;
+					border-color: inherit;
+					@media screen and (max-width: $fg-sm) {
+						margin-top: $space/2;
+					}
+					.svg-icon{
+						font-size: .5em;
+					}
+				}
+				input, textarea{
+
+				}
+			}
+		}
+
 
 		.label-text{
 
