--- a/client/styles/_partials.scss
+++ b/client/styles/_partials.scss
@@ -181,9 +181,19 @@
 			
 		max-width: 100%;
 		max-height: 100%;
-		height: auto;
 		margin: 0 auto;
-		
+		// width: 100%;
+		// height: 100%;
+
+		&.orientation-portrait{
+			// height: auto;
+
+		}
+
+		&:not(.orientation-portrait){
+			// width: auto;
+
+		}
 	}
 }
 
@@ -191,7 +201,8 @@
 .active-overlay{
 
 	@extend .page;
-	position: absolute;
+	position: fixed;
+	overflow: auto;
 	top:0;
 	left:0;
 	right:0;
@@ -199,8 +210,14 @@
 	z-index: 10;
 	width: auto;
 	min-width: 100vw;
+	max-height: 100vh;
 	min-height: 100%;
 
 }
 
 
+body{
+	>svg{
+		display: none;
+	}
+}
